MDEV-29962 Spider: check trx and get conn before lock_tables()

This prevents heap-use-after-free of conns freed in commit of previous
statements