storage/spider/ha_spider.cc
@@ -896,6 +896,10 @@ int ha_spider::external_lock(
     }
   }
 
+  if ((error_num= spider_check_trx_and_get_conn(thd, this)))
+  {
+    DBUG_RETURN(error_num);
+  }
   if (!partition_handler || !partition_handler->handlers)
   {
     DBUG_RETURN(lock_tables(lock_type)); /* Non-partitioned table */
